Implemented auto login in the next use if the app was closed without log off

--- a/BienestarDigital/Base.lproj/Main.storyboard
+++ b/BienestarDigital/Base.lproj/Main.storyboard
@@ -1222,7 +1222,7 @@
         <image name="user_male" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cut-0I-XLI"/>
+        <segue reference="u2X-XH-xAD"/>
         <segue reference="UDJ-ld-ltU"/>
     </inferredMetricsTieBreakers>
 </document>
